--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -135,7 +135,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
 <p><span class="badge badge-light">Denver Denver Denver</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -159,7 +159,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">London London London London</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Site-Reliability-Engineer/24947'>Site Reliability Engineer - US, MI, Southfield - 24947</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Site-Reliability-Engineer/24947'>Site Reliability Engineer - US, MI, Southfield - 24947</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -191,7 +191,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999691988371-senior-site-reliability-engineer'>Prospect Infosys Inc. Senior Site Reliability Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999691988371-senior-site-reliability-engineer'>Prospect Infosys Inc. Senior Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -261,7 +261,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -277,7 +277,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/capsulecares/jobs/4054275002'>Job Application for Senior/Staff Site Reliability Engineer at Capsule</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/capsulecares/jobs/4054275002'>Job Application for Senior/Staff Site Reliability Engineer at Capsule</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -287,7 +287,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">Gurugram, Haryana Malaysia</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/traderev/1f84982c-b868-4f00-adb5-7a7ace20b677'>TradeRev - Site Reliability Engineering Team Lead</a></h5> 
+<h5><a href='https://jobs.lever.co/traderev/1f84982c-b868-4f00-adb5-7a7ace20b677'>TradeRev - Site Reliability Engineering Team Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
